# cockpit-container-apps

./: .gitignore  README.md  run
.devcontainer/: devcontainer.json
.github/actions/build-deb/: action.yml
.github/actions/run-tests/: action.yml
.github/scripts/: build-frontend.sh  run-backend-linting.sh  run-backend-tests.sh  vendor-utilities.sh
.github/workflows/: main.yml
.pybuild/cpython3_3.13_cockpit-container-apps/: cockpit_container_apps-0.1.0-py3-none-any.whl
.pybuild/cpython3_3.13_cockpit-container-apps/scripts/: cockpit-container-apps
backend/: README.md  pyproject.toml  run
backend/cockpit_container_apps/: __init__.py  __main__.py  cli.py
backend/cockpit_container_apps/commands/: __init__.py  filter_packages.py  get_config.py  get_config_schema.py  get_store_data.py  list_categories.py  list_packages_by_category.py  list_stores.py  set_config.py
backend/cockpit_container_apps/utils/: __init__.py  config_utils.py  formatters.py  optimized_apt.py  store_config.py  store_filter.py
backend/tests/: __init__.py  conftest.py  test_cli.py  test_config_utils.py  test_get_config.py  test_get_config_schema.py  test_get_store_data.py  test_install_remove.py  test_list_categories.py  test_list_stores.py  test_optimized_apt.py  test_set_config.py  test_store_filter_optimized.py  test_vendored_errors.py  test_vendored_formatters.py  test_vendored_store_config.py  test_vendored_validators.py
debian/: changelog  cockpit-container-apps.lintian-overrides  cockpit-container-apps.postinst.debhelper  cockpit-container-apps.prerm.debhelper  cockpit-container-apps.substvars  control  copyright  debhelper-build-stamp  files  rules
debian/cockpit-container-apps/DEBIAN/: control  md5sums  postinst  prerm
docker/: Dockerfile.debtools  Dockerfile.devtools  docker-compose.debtools.yml  docker-compose.devtools.yml
docs/: ARCHITECTURE.md  SPEC.md
frontend/: .eslintrc.json  esbuild.config.js  package-lock.json  package.json  run  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  app.css  dark-theme.ts  index.html  index.tsx  manifest.json
frontend/src/__tests__/: App.navigation.test.tsx  App.test.tsx
frontend/src/api/: index.ts  types.ts
frontend/src/api/__tests__/: index.test.ts
frontend/src/components/: AppCard.tsx  AppDetails.tsx  AppListView.tsx  BreadcrumbNav.tsx  CategoriesView.tsx  CategoryCard.tsx  ConfigFields.tsx  ConfigForm.tsx  StoreSelector.tsx
frontend/src/components/__tests__/: AppCard.test.tsx  AppDetails.test.tsx  AppListView.test.tsx  CategoryCard.test.tsx  (+6 more)
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useUrlBasedNavigation.ts
frontend/src/utils/: cockpitHelpers.ts  routing.ts  storage.ts
frontend/src/views/: InstalledAppsView.tsx
frontend/test/: setup.ts
(+16 files in other folders)
